--- a/index.html
+++ b/index.html
@@ -407,7 +407,7 @@
         <form name="modal-form">
             <label class="modal-label">
                 Name
-                <div class="modal-wrap">
+                <span class="modal-wrap">
                     <input class="modal-input"
                     name="user-name"
                     type="text"
@@ -416,26 +416,26 @@
                     <svg class="modal-icon" width="18" height="18">
                         <use href="./images/icons.svg#icon-person"></use>
                     </svg>
-                </div>
+                </span>
             </label>
             
             <label class="modal-label">
                 Phone
-                <div class="modal-wrap">
+                <span class="modal-wrap">
                     <input class="modal-input"
-                    name="telephone"
+                    name="tel"
                     type="number"
                     required
                     />
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-phone"></use>
                     </svg>
-                </div>
+                </span>
             </label>
 
             <label class="modal-label">
                 Email
-                <div class="modal-wrap">
+                <span class="modal-wrap">
                     <input class="modal-input"
                     name="email"
                     type="email"
@@ -444,7 +444,7 @@
                     <svg class="modal-icon" width="18" height="24">
                         <use href="./images/icons.svg#icon-email"></use>
                     </svg>
-                </div>
+                </span>
             </label>
 
             <label class="modal-label">
@@ -460,8 +460,7 @@
             <input class="modal-checkbox"
             name="checkbox"
             type="accept"
-            value="I accept the terms
-            and conditions of the Privacy Policy"
+            value="true"
             />
             <span class="checkbox-icon"></span>
             <svg class="click" width="10" height="8">
