--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
             <input class="footer-input"
             name="email"
             type="email"
-            placeholder="email"
+            placeholder="E-mail"
             />
         </label>
         
@@ -423,8 +423,8 @@
                 Phone
                 <span class="modal-wrap">
                     <input class="modal-input"
-                    name="tel"
-                    type="number"
+                    name="phone"
+                    type="tel"
                     required
                     />
                     <svg class="modal-icon" width="18" height="24">
