--- a/index.html
+++ b/index.html
@@ -459,14 +459,14 @@
         <label class="modal-label">
             <input class="modal-checkbox"
             name="checkbox"
-            type="accept"
-            value="true"
+            type="checkbox"
+    
             />
             <span class="checkbox-icon"></span>
             <svg class="click" width="10" height="8">
                 <use href="./images/icons.svg#icon-Vector"></use>
             </svg>
-            I accept the terms and conditions of the Privacy Policy
+            I accept the terms and conditions of the &nbsp;
             <a class="privacy-link link" href="">Privacy Policy</a>
             </label>
 
