--- a/index.html
+++ b/index.html
@@ -451,9 +451,7 @@
                 Comment
                 <textarea class="modal-textarea"
                 name="comment"
-                type="text"
-                placeholder="Text input">
-            </textarea>
+                placeholder="Text input"></textarea>
         </label>
 
         <label class="modal-label">
@@ -462,10 +460,12 @@
             type="checkbox"
     
             />
-            <span class="checkbox-icon"></span>
-            <svg class="click" width="10" height="8">
-                <use href="./images/icons.svg#icon-Vector"></use>
-            </svg>
+            <span class="checkbox-icon">
+                <svg class="click" width="10" height="8">
+                    <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+            </span>
+            
             I accept the terms and conditions of the &nbsp;
             <a class="privacy-link link" href="">Privacy Policy</a>
             </label>
