--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -44,7 +43,7 @@
     <section class="hero">
     <div class="container">
         <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-button btn" type="button"data-modal-open>Order Service</button>
+        <button class="hero-button btn" type="button" data-modal-open>Order Service</button>
     </div>
     </section>
 
@@ -373,7 +372,7 @@
             </li>
         </ul>
     </div>
-    <div class="footer-subscribe"
+    <div class="footer-subscribe">
     <p class="subscribe-title">Subscribe</p>
     <form class="footer-form">
         <label class="footer-label">
